<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">


    <ScrollView
        android:id="@+id/ScrollView"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        app:layout_constraintBottom_toTopOf="@+id/guideline_imageview_start"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/textView_Bluetooth_Log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_fragment_textBox_initValue"></TextView>
    </ScrollView>

    <!--このGuidelineにScrollViewのそこをくっつけ、このGuidelineの比率に従わせる-->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_imageview_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/guideline_imageview_start"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/button_BLE_Scan_Start"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"
                android:text="@string/button_BLE_Scan_Start"
                />

            <Button
                android:id="@+id/button_BLE_Scan_Stop"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"
                android:text="@string/button_BLE_Scan_Stop"
                />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Button
                android:id="@+id/button_BLE_Pearling_Start"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"
                android:text="@string/button_BLE_Pearling_Start"
                />

            <Button
                android:id="@+id/button_BLE_Connect_Start"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"
                android:text="@string/button_BLE_Connect_Start"
                />

            <Button
                android:id="@+id/button_BLE_Connect_Stop"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"
                android:text="@string/button_BLE_Connect_Stop"/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/button_BLE_Calling"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"
                android:text="@string/button_BLE_Connect_Calling"/>
            <Button
                android:id="@+id/button_BLE_Called"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"
                android:text="@string/button_BLE_Connect_Called"/>
            <Button
                android:id="@+id/button_BLE_Attention"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginHorizontal="20dp"
                android:layout_height="wrap_content"
                android:text="@string/button_BLE_Connect_Attention"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
            <Button
                android:id="@+id/button_second"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="150dp"
                android:text="@string/previous" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>